--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "react-tilty": "^2.0.2",
+    "serve": "^11.3.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
